// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a AddressEdit 1`] = `
<div class="van-address-edit">
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label"><span>姓名</span></div>
    <div class="van-cell__value">
      <div class="van-field__body"><input type="text" placeholder="收货人姓名" value="" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label"><span>电话</span></div>
    <div class="van-cell__value">
      <div class="van-field__body"><input type="tel" placeholder="收货人手机号" value="" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label"><span>地区</span></div>
    <div class="van-cell__value">
      <div class="van-field__body"><input type="text" placeholder="选择省 / 市 / 区" readonly="readonly" value="" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-address-edit-detail">
    <div class="van-cell__value van-cell__value--alone">
      <div class="van-cell van-field">
        <div class="van-cell__title van-field__label"><span>详细地址</span></div>
        <div class="van-cell__value">
          <div class="van-field__body"><textarea rows="1" maxlength="200" placeholder="街道门牌、楼层房间号等信息" class="van-field__control"></textarea></div>
        </div>
      </div>
    </div>
  </div>
  <div class="van-address-edit__buttons"><button class="van-button van-button--danger van-button--normal van-button--block"><span class="van-button__text">保存</span></button></div>
  <div name="van-popup-slide-bottom" class="van-popup van-popup--bottom" style="display:none;">
    <div class="van-picker van-area">
      <div class="van-hairline--top-bottom van-picker__toolbar">
        <div class="van-picker__cancel">取消</div>
        <div class="van-picker__confirm">确认</div>
      </div>
      <div class="van-picker__loading">
        <div class="van-loading van-loading--circular van-loading" style="color:#c9c9c9;"><span class="van-loading__spinner van-loading__spinner--circular"><svg viewBox="25 25 50 50" class="van-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
      </div>
      <div class="van-picker__columns" style="height:220px;">
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="van-hairline--top-bottom van-picker__frame" style="height:44px;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`create a AddressEdit with props 1`] = `
<div class="van-address-edit">
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label"><span>姓名</span></div>
    <div class="van-cell__value">
      <div class="van-field__body"><input type="text" placeholder="收货人姓名" value="测试" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label"><span>电话</span></div>
    <div class="van-cell__value">
      <div class="van-field__body"><input type="tel" placeholder="收货人手机号" value="13000000000" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label"><span>地区</span></div>
    <div class="van-cell__value">
      <div class="van-field__body"><input type="text" placeholder="选择省 / 市 / 区" readonly="readonly" value="北京市/朝阳区" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-address-edit-detail">
    <div class="van-cell__value van-cell__value--alone">
      <div class="van-cell van-field">
        <div class="van-cell__title van-field__label"><span>详细地址</span></div>
        <div class="van-cell__value">
          <div class="van-field__body"><textarea rows="1" maxlength="200" placeholder="街道门牌、楼层房间号等信息" class="van-field__control">详细地址</textarea></div>
        </div>
      </div>
    </div>
  </div>
  <div class="van-cell van-field">
    <div class="van-cell__title van-field__label"><span>邮政编码</span></div>
    <div class="van-cell__value">
      <div class="van-field__body"><input type="tel" maxlength="6" placeholder="邮政编码" value="10000" class="van-field__control"></div>
    </div>
  </div>
  <div class="van-cell van-cell--center van-cell--borderless van-switch-cell">
    <div class="van-cell__title"><span>设为默认收货地址</span></div>
    <div class="van-cell__value">
      <div class="van-switch van-switch--on" style="font-size:24px;">
        <div class="van-switch__node"></div>
      </div>
    </div>
  </div>
  <div class="van-address-edit__buttons"><button class="van-button van-button--danger van-button--normal van-button--block"><span class="van-button__text">保存</span></button></div>
  <div name="van-popup-slide-bottom" class="van-popup van-popup--bottom" style="display:none;">
    <div class="van-picker van-area">
      <div class="van-hairline--top-bottom van-picker__toolbar">
        <div class="van-picker__cancel">取消</div>
        <div class="van-picker__confirm">确认</div>
      </div>
      <div class="van-picker__columns" style="height:220px;">
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="van-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="van-hairline--top-bottom van-picker__frame" style="height:44px;"></div>
      </div>
    </div>
  </div>
</div>
`;
